SERVER-38344 Hold database distlocks during migration and split